remove guice